# dcs-plugins

./: .gitignore  README.md  meson.build  meson_options.txt
backends/: meson.build
backends/sub-analyzer/: README.md  meson.build
backends/sub-analyzer/data/: meson.build  sub-analyzer.json  sub-analyzer.plugin
backends/sub-analyzer/src/: dcs-config-provider.vala  dcs-factory-provider.vala  dcs-service-addin.vala  meson.build  pack-util.c  pack-util.h  sub-analyzer-backend.vala
devices/: meson.build
devices/pub-gen/: .gitignore  README.md  meson.build
devices/pub-gen/data/: meson.build  pub-gen.plugin
devices/pub-gen/src/: dcs-factory-provider.vala  dcs-service-addin.vala  meson.build  pack-util.c  pack-util.h
devices/pub-gen/vapi/: util.vapi
examples/: meson.build
examples/plugins/: meson.build
examples/plugins/3d-animation/: 3d-animation.plugin  meson.build
examples/plugins/lua-test/: lua-test.lua  meson.build
examples/plugins/mpl-pyplot/: mpl-pyplot.plugin
lua/test/: test.plugin
python/3d-animation/: 3d-animation.py
python/mpl-pyplot/: mpl-pyplot.py
vala/device/pub-generator/: meson.build
vala/device/pub-generator/data/: meson.build
vala/device/pub-generator/src/: config.vapi  dcs-config-provider.vala  dcs-service-addin.vala  meson.build  pub-gen-device.vala
vapi/: util.vapi
