configure_file(
          input: 'sub-analyzer.plugin',
         output: 'sub-analyzer.plugin',
  configuration: configuration_data(),
        install: true,
    install_dir: backenddir
)

configure_file(
          input: 'sub-analyzer.json',
         output: 'sub-analyzer.json',
  configuration: configuration_data(),
        install: true,
    install_dir: backendconfdir
)
