configure_file(
          input: 'pub-gen.plugin',
         output: 'pub-gen.plugin',
  configuration: configuration_data(),
        install: true,
    install_dir: devicedir
)

configure_file(
          input: 'pub-gen.json',
         output: 'pub-gen.json',
  configuration: configuration_data(),
        install: true,
    install_dir: deviceconfdir
)
