configure_file(
          input: 'mpl-pyplot.plugin',
         output: 'mpl-pyplot.plugin',
  configuration: configuration_data(),
        install: true,
    install_dir: plugindir
)

configure_file(
          input: 'mpl-pyplot.py',
         output: 'mpl-pyplot.py',
  configuration: configuration_data(),
        install: true,
    install_dir: plugindir
)
