configure_file(
          input: 'lua-test.plugin',
         output: 'lua-test.plugin',
  configuration: configuration_data(),
        install: true,
    install_dir: plugindir
)

configure_file(
          input: 'lua-test.py',
         output: 'lua-test.py',
  configuration: configuration_data(),
        install: true,
    install_dir: plugindir
)
